--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ashly LaMarr
 description: Software Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-#avatar: https://raw.githubusercontent.com/SurlyMae/surlymae.github.io/master/images/Ash 2016 Headshots-11.jpg
+avatar: https://raw.githubusercontent.com/SurlyMae/surlymae.github.io/master/images/ashly-lamarr.jpg
 
 #
 # Flags below are optional
