--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ashly LaMarr
 
 # Short bio or description (displayed in the header)
-description: Software Developer
+description: Software Designer & Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/SurlyMae/surlymae.github.io/master/images/ashly-lamarr.jpg
@@ -17,14 +17,14 @@ avatar: https://raw.githubusercontent.com/SurlyMae/surlymae.github.io/master/ima
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  ? dribbble
-  ? email
-  ? facebook
-  ? flickr
+  dribbble:
+  email:
+  facebook:
+  flickr:
   github: SurlyMae
   instagram: SurlyMae
   linkedin: ashlylamarr
-  ? pinterest
+  pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: SurlyMae
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
@@ -33,10 +33,10 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-? disqus
+disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-? google_analytics
+google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
