--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ashly LaMarr
 
 # Short bio or description (displayed in the header)
-description: Software Designer & Developer
+description: Back-end Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/SurlyMae/surlymae.github.io/master/images/ashly-lamarr.jpg
