--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: A LaMarr
+name: Ashly LaMarr
 
 # Short bio or description (displayed in the header)
-description: Engineer
+description: Back-end Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/SurlyMae/surlymae.github.io/master/images/ashly-lamarr.jpg
